--- a/html/rotate.html
+++ b/html/rotate.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        @-webkit-keyframes wobble {
+            from {
+                -webkit-transform: none;
+                transform: none;
+            }
+
+            15% {
+                -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -5deg);
+                transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -5deg);
+            }
+
+            30% {
+                -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, 3deg);
+                transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, 3deg);
+            }
+
+            45% {
+                -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -3deg);
+                transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -3deg);
+            }
+
+            60% {
+                -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, 2deg);
+                transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, 2deg);
+            }
+
+            75% {
+                -webkit-transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -1deg);
+                transform: translate3d(0, 0, 0) rotate3d(0, 0, 1, -1deg);
+            }
+
+            to {
+                -webkit-transform: none;
+                transform: none;
+            }
+        }
         html {
             width: 100%;
             height: 100%;
